chore: add interactionsDisabled

--- a/pages/docs/components/select.mdx
+++ b/pages/docs/components/select.mdx
@@ -3,6 +3,8 @@
 import {
   SelectExample,
   properties,
+  renderOptionProps,
+  defaultSelectType,
   SelectPlayground,
 } from '@components/examples/select'
 import PropsTable from '@components/props-table'
@@ -18,34 +20,31 @@ This component uses native `<select>` HTML tag underneath. This allows passing `
 import { DropdownProps, Select } from '@creation-ui/react'
 import { useState } from 'react'
 
-export const options = [
+const options = [
   { id: '1', label: 'Wade Cooper' },
   { id: '2', label: 'Arlene Mccoy' },
   { id: '3', label: 'Devon Webb' },
-  { id: '4', label: 'Tom Cook' },
-  { id: '5', label: 'Tanya Fox' },
-  { id: '6', label: 'Hellen Schmidt' },
-  { id: '7', label: 'Another option' },
+  { id: '4', label: 'Option disabled', disabled: true },
+  { id: '5', label: 'Tom Cook' },
+  { id: '6', label: 'Tanya Fox' },
+  { id: '7', label: 'Hellen Schmidt' },
+  { id: '8', label: 'Another option' },
 ]
 
 export const SelectExample = ({ ...props }: DropdownProps) => {
-  const [value, setValue] = useState<string | undefined>(undefined)
+  const [value, setValue] = useState(null)
+  const onClear = () => setValue(null)
 
   return (
     <Select
       label={'Person'}
       value={value}
       placeholder='Select value'
-      onChange={e => setValue(e.target.value)}
-      onClear={() => setValue('')}
-    >
-      <option value={undefined} />
-      {options?.map(({ id, label, disabled }) => (
-        <option value={label} key={id} disabled={disabled}>
-          {label}
-        </option>
-      ))}
-    </Select>
+      clearable
+      onChange={setValue}
+      onClear={onClear}
+      options={options}
+    />
   )
 }
 ```
@@ -56,4 +55,16 @@ export const SelectExample = ({ ...props }: DropdownProps) => {
   properties={properties}
   name='Select'
   description='Native Select component.'
+/>
+
+<PropsTable
+  properties={renderOptionProps}
+  name='RenderOptionProps'
+  description='Type of props passed to renderOption function.'
+/>
+
+<PropsTable
+  properties={defaultSelectType}
+  name='SelectOptionDefault'
+  description='Default type of option if custom was not provided.'
 />
