--- a/pages/docs/components/select.mdx
+++ b/pages/docs/components/select.mdx
@@ -61,6 +61,6 @@ export const SelectExample = ({ ...props }: DropdownProps) => {
 
 <PropsTable
   properties={defaultOptionType}
-  name='type SelectOptionDefault'
+  name='SelectOptionDefault'
   description='Default type of option if custom was not provided.'
 />
