fix: tsc, prettier

--- a/pages/docs/components/dropdown-chevron.mdx
+++ b/pages/docs/components/dropdown-chevron.mdx
@@ -23,7 +23,10 @@ export const DropdownChevronExample = () => {
 }
 ```
 
-import { DropdownChevronExample, properties } from '@components/examples/dropdown-chevron'
+import {
+  DropdownChevronExample,
+  properties,
+} from '@components/examples/dropdown-chevron'
 import PropsTable from '@components/props-table'
 
 <DropdownChevronExample />
