--- a/pages/docs/components/input-base.mdx
+++ b/pages/docs/components/input-base.mdx
@@ -19,7 +19,4 @@ It allows to set start- and end-adornments, set loading, readOnly, disabled stat
 
 ## Component API
 
-<PropsTable
-  properties={inputBasePublicProps}
-  name='InputBase props'
-/>
+<PropsTable properties={inputBasePublicProps} name='InputBase props' />
