--- a/pages/docs/components/loading-overlay.mdx
+++ b/pages/docs/components/loading-overlay.mdx
@@ -13,7 +13,7 @@ Animated spinner for loading states.
 ```tsx copy
 import { LoadingOverlay } from '@creation-ui/react'
 
-<LoadingOverlay />
+;<LoadingOverlay />
 ```
 
 ## Showing the overlay
