--- a/pages/docs/components/loader.mdx
+++ b/pages/docs/components/loader.mdx
@@ -10,7 +10,7 @@ import { ELEMENT_SIZES } from '@creation-ui/react'
 ```tsx copy
 import { Loader } from '@creation-ui/react'
 
-<Loader />
+;<Loader />
 ```
 
 <LoaderExample />
