chore: align types to core

--- a/pages/_app.mdx
+++ b/pages/_app.mdx
@@ -1,5 +1,5 @@
 import '../styles/index.css'
-import '@creation-ui/react/index.css'
+import '@creation-ui/core/index.css'
 import { Analytics } from '@vercel/analytics/react'
 
 export default function App({ Component, pageProps }) {
