fix: imports in mdx, colors from core

--- a/pages/docs/components/avatar.mdx
+++ b/pages/docs/components/avatar.mdx
@@ -1,7 +1,7 @@
 # Avatar
 
 import { Avatar } from '@creation-ui/react'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
+import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/core'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
 import PropsTable from '@components/props-table'
