--- a/pages/docs/components/drawer.mdx
+++ b/pages/docs/components/drawer.mdx
@@ -5,7 +5,7 @@ A drawer is a UI element that overlays on top of the current page. It is commonl
 import { Container } from '@components/container'
 import { properties, DrawerPlayground } from '@components/examples/drawer'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
+import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/core'
 import { Drawer } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
 import { ListOrTypes } from '@utils/list-or-types'
