--- a/pages/docs/components/loader.mdx
+++ b/pages/docs/components/loader.mdx
@@ -5,7 +5,7 @@ Animated spinner for loading states
 import { LoaderExample, properties } from '@components/examples/loader'
 import PropsTable from '@components/props-table'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES } from '@creation-ui/react'
+import { ELEMENT_SIZES } from '@creation-ui/core'
 
 ```tsx copy
 import { Loader } from '@creation-ui/react'
