--- a/pages/docs/components/modal.mdx
+++ b/pages/docs/components/modal.mdx
@@ -1,7 +1,7 @@
 import { Container } from '@components/container'
 import { properties, ModalExample } from '@components/examples/modal'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION } from '@creation-ui/react'
+import { ELEMENT_POSITION } from '@creation-ui/core'
 import { Modal } from '@creation-ui/react'
 import PropsTable from '@components/props-table'
 import { ListOrTypes } from '@utils/list-or-types'
