--- a/pages/docs/components/toggle-group.mdx
+++ b/pages/docs/components/toggle-group.mdx
@@ -9,7 +9,7 @@ import {
 } from '@components/examples/toggle-group'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
+import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/core'
 import PropsTable from '@components/props-table'
 import { Playground } from '@components/playground'
 
