--- a/pages/docs/components/chip.mdx
+++ b/pages/docs/components/chip.mdx
@@ -1,7 +1,7 @@
 import { Chip } from '@creation-ui/react'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
+import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/core'
 import PropsTable from '@components/props-table'
 import { properties, ChipPlayground } from '@components/examples/chip'
 import { Playground } from '@components/playground'
