--- a/pages/docs/components/loading-overlay.mdx
+++ b/pages/docs/components/loading-overlay.mdx
@@ -4,7 +4,7 @@ import {
 } from '@components/examples/loading-overlay'
 import PropsTable from '@components/props-table'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES } from '@creation-ui/react'
+import { ELEMENT_SIZES } from '@creation-ui/core'
 
 # LoadingOverlay
 
