--- a/pages/docs/components/progress-bar.mdx
+++ b/pages/docs/components/progress-bar.mdx
@@ -6,7 +6,7 @@ import {
   ProgressBarPlayground,
 } from '@components/examples/progress-bar'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/react'
+import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/core'
 import PropsTable from '@components/props-table'
 import { ListOrTypes } from 'utils/list-or-types'
 
