--- a/pages/docs/components/radio-group.mdx
+++ b/pages/docs/components/radio-group.mdx
@@ -6,7 +6,7 @@ import {
 } from '@components/examples/radio-group'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
+import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/core'
 import PropsTable from '@components/props-table'
 
 Container for list of `Radio` options
