--- a/pages/docs/components/switch.mdx
+++ b/pages/docs/components/switch.mdx
@@ -3,7 +3,7 @@
 import { SwitchPlayground } from '@components/examples/switch'
 import { Container } from '@components/container'
 import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/react'
+import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/core'
 import PropsTable from '@components/props-table'
 import { properties } from '@components/examples/switch'
 import { Playground } from '@components/playground'
