refactor: Card component

--- a/pages/docs/components/card.mdx
+++ b/pages/docs/components/card.mdx
@@ -1,10 +1,55 @@
 # Card
 
-import { CardExample, properties } from '@components/examples/card'
+import { CardPlayground, properties } from '@components/examples/card'
 import PropsTable from '@components/props-table'
 
-<CardExample />
+<CardPlayground />
+
+## Example
+
+```tsx copy
+import Icon from '@components/icon'
+import {
+  Card,
+  CardContent,
+  CardDescription,
+  CardHeader,
+  CardProps,
+  CardStats,
+  CardTitle,
+} from '@creation-ui/react'
+import { mdiAccount } from '@mdi/js'
+import type { FC } from 'react'
+
+interface CardExampleProps {
+  title: string
+  description: string
+  content: string
+}
+
+export const CardExample: FC<CardExampleProps> = ({
+  title,
+  content,
+  description,
+}) => (
+  <Card>
+    <CardHeader>
+      <CardTitle>{title}</CardTitle>
+      <Icon path={mdiAccount} className='block flex-shrink-0' />
+    </CardHeader>
+    <CardContent>
+      <CardStats>{content}</CardStats>
+    </CardContent>
+    <CardDescription>{description}</CardDescription>
+  </Card>
+)
+```
 
 ## Component API
 
 <PropsTable properties={properties} name='Card' />
+<PropsTable properties={properties} name='CardHeader' />
+<PropsTable properties={properties} name='CardTitle' />
+<PropsTable properties={properties} name='CardContent' />
+<PropsTable properties={properties} name='CardStats' />
+<PropsTable properties={properties} name='CardDescription' />
