--- a/pages/docs/components/calendar.mdx
+++ b/pages/docs/components/calendar.mdx
@@ -2,11 +2,19 @@
 
 import { Calendar } from '@creation-ui/react'
 import { Container } from '@components/container'
-import { properties, CalendarPlayground } from '@components/examples/calendar'
+import {
+  properties,
+  CalendarPlayground,
+  CalendarExample,
+} from '@components/examples/calendar'
 import PropsTable from '@components/props-table'
 import { Icon } from '@mdi/react'
 
 <CalendarPlayground />
+
+## Date range selection and two months view
+
+<CalendarExample />
 
 ## Component API
 
