Add ShowFirstMatching component to @creation-ui/react package

--- a/pages/docs/components/show.mdx
+++ b/pages/docs/components/show.mdx
@@ -1,4 +1,8 @@
-import { ShowExample, properties } from '@components/examples/show'
+import {
+  ShowExample,
+  ShowFirstMatchingExample,
+  properties,
+} from '@components/examples/show'
 import PropsTable from '@components/props-table'
 
 # Show
@@ -39,7 +43,43 @@ The `when` prop determines which content to display. The fallback pecifies what 
 </Show>
 ```
 
-The Show component uses animations from `framer-motion` to smoothly transition between the `children` and `fallback` components when the value of `when` changes.
+# ShowFirstMatching
+
+This wrapper will render the first child that matches the `when` prop. If no children match, it will render the `fallback` component.
+
+<ShowFirstMatchingExample />
+
+```tsx
+export const ShowFirstMatchingExample = () => {
+  const [value, setValue] = useState(-1)
+
+  const increment = () => setValue(value + 1)
+  const decrement = () => setValue(value - 1)
+
+  return (
+    <Container variant='column'>
+      <div className='flex gap-3'>
+        <Button onClick={increment} variant='outlined' size='sm' circle>
+          <Icon path={mdiPlus} />
+        </Button>
+        <Button onClick={decrement} variant='outlined' size='sm' circle>
+          <Icon path={mdiMinus} />
+        </Button>
+      </div>
+      <div>
+        Value <code>"{value}"</code>
+        <ShowFirstMatching fallback={<div>No match</div>}>
+          <Show when={value < 0}>is a negative number</Show>
+          <Show when={value >= 0 && value <= 5}>is between 0 and 5</Show>
+          <Show when={value > 5}>is greater than 5</Show>
+          {/* this will never render because the first matching is `x > 5` rule */}
+          <Show when={value >= 15}>is greater than 15</Show>
+        </ShowFirstMatching>
+      </div>
+    </Container>
+  )
+}
+```
 
 ## Component API
 
