--- a/pages/docs/components/show.mdx
+++ b/pages/docs/components/show.mdx
@@ -1,13 +1,18 @@
 import {
   ShowExample,
   ShowFirstMatchingExample,
-  properties,
+  propertiesShow,
+  propertiesShowFirstMatching,
 } from '@components/examples/show'
 import PropsTable from '@components/props-table'
 
 # Show
 
 The Show component is a utility isnpired by SolidJS for conditional rendering with smooth transitions. It displays its children based on the truthiness of the `when` prop, and can display a `fallback` component if `when` is false.
+
+```tsx copy
+import { Show } from '@creation-ui/react'
+```
 
 In this example, we're using the `Show` component to conditionally render a "Log in" or "Log out" button based on whether the user is logged in.
 Here's how it works:
@@ -35,7 +40,7 @@ export const ShowExample = () => {
 
 The `when` prop determines which content to display. The fallback pecifies what to display if `when` is `false`. In this case, it's a "Log in" button. If `when` is `true` the "Log out" button will be displayed.
 
-```tsx
+```tsx copy
 <Show when={loggedIn} fallback={<Button onClick={login}>Log in</Button>}>
   <Button onClick={logout} variant={'outlined'}>
     Log out
@@ -45,46 +50,34 @@ The `when` prop determines which content to display. The fallback pecifies what 
 
 # ShowFirstMatching
 
-This wrapper will render the first child that matches the `when` prop. If no children match, it will render the `fallback` component.
+This wrapper will render the first child that matches the `when` prop. If no children match, it will render the `fallback` component - `null` by default.
+
+```tsx copy
+import { ShowFirstMatching } from '@creation-ui/react'
+```
 
 <ShowFirstMatchingExample />
 
-```tsx
-export const ShowFirstMatchingExample = () => {
-  const [value, setValue] = useState(-1)
-
-  const increment = () => setValue(value + 1)
-  const decrement = () => setValue(value - 1)
-
-  return (
-    <Container variant='column'>
-      <div className='flex gap-3'>
-        <Button onClick={increment} variant='outlined' size='sm' circle>
-          <Icon path={mdiPlus} />
-        </Button>
-        <Button onClick={decrement} variant='outlined' size='sm' circle>
-          <Icon path={mdiMinus} />
-        </Button>
-      </div>
-      <div>
-        Value <code>"{value}"</code>
-        <ShowFirstMatching fallback={<div>No match</div>}>
-          <Show when={value < 0}>is a negative number</Show>
-          <Show when={value >= 0 && value <= 5}>is between 0 and 5</Show>
-          <Show when={value > 5}>is greater than 5</Show>
-          {/* this will never render because the first matching is `x > 5` rule */}
-          <Show when={value >= 15}>is greater than 15</Show>
-        </ShowFirstMatching>
-      </div>
-    </Container>
-  )
-}
+```tsx copy
+<ShowFirstMatching fallback={<div>No match</div>}>
+  <Show when={value < 0}>is a negative number</Show>
+  <Show when={value >= 0 && value <= 5}>is between 0 and 5</Show>
+  <Show when={value > 5}>is greater than 5</Show>
+  {/* this will never render because the first matching is `x > 5` rule */}
+  <Show when={value >= 15}>is greater than 15</Show>
+</ShowFirstMatching>
 ```
 
 ## Component API
 
 <PropsTable
-  properties={properties}
+  properties={propertiesShow}
   name='Show'
-  description='Show component props'
+  description='Component props'
+/>
+
+<PropsTable
+  properties={propertiesShowFirstMatching}
+  name='ShowFirstMatching'
+  description='Parent component props'
 />
