feat(design): Add customization options for Drawer component
The commit adds customization options to the Drawer component, allowing users to customize the width, height, and styling of the drawer. This provides more flexibility in designing and aligning the drawer with different layouts and UI requirements. The changes include the addition of a new example, `DrawerCustomizedExample`, demonstrating the usage of the customization options. This enhancement improves the overall user experience and expands the capabilities of the Drawer component.

--- a/pages/docs/components/drawer.mdx
+++ b/pages/docs/components/drawer.mdx
@@ -2,13 +2,12 @@
 
 A drawer is a UI element that overlays on top of the current page. It is commonly used to display additional content or actions for the user.
 
-import { Container } from '@components/container'
-import { properties, DrawerPlayground } from '@components/examples/drawer'
-import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_POSITION, ELEMENT_SIZES } from '@creation-ui/core'
-import { Drawer } from '@creation-ui/react'
+import {
+  DrawerPlayground,
+  DrawerCustomizedExample,
+  properties,
+} from '@components/examples/drawer'
 import PropsTable from '@components/props-table'
-import { ListOrTypes } from '@utils/list-or-types'
 
 <DrawerPlayground />
 
@@ -45,6 +44,10 @@ export const DrawerExample = (props: DrawerProps) => {
   )
 }
 ```
+
+## Custom styles drawer
+
+<DrawerCustomizedExample />
 
 ## Component API
 
