refactor: Avatar - remove unnecessary features, add AvatarGroup

--- a/pages/docs/components/avatar.mdx
+++ b/pages/docs/components/avatar.mdx
@@ -3,10 +3,10 @@
 import PropsTable from '@components/props-table'
 import {
   properties,
-  badgeProperties,
-  placementProperties,
+  groupProperties,
   AvatarPlayground,
   AvatarWithNumberSize,
+  AvatarGroupExample,
 } from '@components/examples/avatar'
 
 export const defaultProps = {
@@ -21,9 +21,28 @@ export const defaultProps = {
 ## Custom size avatar
 
 Use `size` prop to set custom size of avatar in pixels. <br/>
-Not all features (badges, notifications) might work - <b>use with caution</b>.
 
 <AvatarWithNumberSize />
+
+## AvatarGroup
+
+The `AvatarGroup` component is used to display a group of avatars.
+
+<AvatarGroupExample size={40} />
+
+### with `max` property
+
+The `max` property limits the number of avatars displayed. The remaining avatars are represented by a `+{number}` avatar.
+Also in this example `surplusClassName` property was useed to add custom styles to the `+{number}` avatar.
+
+<AvatarGroupExample max={3} surplusClassName='!bg-error-200' />
+
+### with `total` property
+
+The `total` property is used to display the total number
+of avatars. The remaining avatars are represented by a `+{number}` avatar.
+
+<AvatarGroupExample total={325} />
 
 ## Component API
 
@@ -32,13 +51,9 @@ Not all features (badges, notifications) might work - <b>use with caution</b>.
   name='Avatar'
   description='Avatar component props.'
 />
+
 <PropsTable
-  properties={badgeProperties}
-  name='Badge'
-  description='Detailed props of "badge" Avatar props'
-/>
-<PropsTable
-  properties={placementProperties}
-  name='Placement'
-  description='Detailed props of "badge.placement" Avatar props'
+  properties={groupProperties}
+  name='AvatarGroup'
+  description='AvatarGroup component props.'
 />
