refactor: Chip component

--- a/pages/docs/components/chip.mdx
+++ b/pages/docs/components/chip.mdx
@@ -1,16 +1,46 @@
-import { Chip } from '@creation-ui/react'
-import { Container } from '@components/container'
-import { UnfoldVariants } from '@components/unfold-variants'
-import { ELEMENT_SIZES, ELEMENT_STATUS } from '@creation-ui/core'
 import PropsTable from '@components/props-table'
-import { properties, ChipPlayground } from '@components/examples/chip'
-import { Playground } from '@components/playground'
+import {
+  CustomChip,
+  properties,
+  ChipPlayground,
+  ChipAdornmentsExamples,
+} from '@components/examples/chip'
+import { Container } from '@components/container'
 
 # Chip
 
 ## Playground
 
 <ChipPlayground />
+
+## Adornments
+
+Adornments are icons or other elements that can be added to the start or end of the Input component for additional interactivity or visual feedback:
+
+<ChipAdornmentsExamples />
+
+## What if I a color other than `status`?
+
+For this use case, you can use the `style` prop to customize the color of the chip. For example:
+
+<Container>
+  <CustomChip />
+</Container>
+
+Be aware that this will override the default coloring styles of the chip. Notice that bg hover effect was lost as it came from now disabled `status` styling.
+
+```tsx
+export const CustomChip = () => (
+  <Chip
+    label={'Indefatigable'}
+    style={{
+      color: 'rgba(255, 153, 0)',
+      backgroundColor: 'rgba(255, 153, 0, 0.1)',
+      borderColor: 'rgba(255, 153, 0, 0.5)',
+    }}
+  />
+)
+```
 
 ## Component API
 
