--- a/pages/docs/components/button.mdx
+++ b/pages/docs/components/button.mdx
@@ -1,11 +1,7 @@
 # Button
 
-import { Button } from '@creation-ui/react'
-import { Container } from '@components/container'
-import { properties, ButtonPlayground } from '@components/examples/button'
+import { ButtonPlayground, properties } from '@components/examples/button'
 import PropsTable from '@components/props-table'
-import { Icon } from '@mdi/react'
-import { mdiAccountCircle } from '@mdi/js'
 
 <ButtonPlayground />
 
